syntax = "proto3";

package books;
option go_package = "/pb;pb";

service UserService {
    rpc CheckRegistrationData (userData) returns ();
    rpc CreateNewUser (userData) returns (UserName);
}

message UserData {
    string username = 1;
    string password = 2;
}

message UserName {
    string username = 1;
}